selfhost/test/typechecker/break/error_location_module.out
Error at %FILE_NAME%:1:1
Invalid location for break statement
  |  break
     ^
Break statements can only be used within loop bodies
